--- a/Desktop/Search Engine/index.html
+++ b/Desktop/Search Engine/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>One for Google Search</title>
+        <title> Google Search Engine</title>
         <link rel="shortcut icon" type="image/x-icon" href="https:upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg">
 
     </head>
